# ventilation-c

./: .gitignore  LICENSE  meson.build
example/: meson.build  pcv.cpp  vcv.cpp
include/ventilation/: ventilation.h
source/: ventilation-compliance.cpp  ventilation-compliance.h  ventilation-cycle.cpp  ventilation-cycle.h  ventilation-elastance.cpp  ventilation-elastance.h  ventilation-flow.cpp  ventilation-flow.h  ventilation-lung.cpp  ventilation-lung.h  ventilation-packet.cpp  ventilation-packet.h  ventilation-pressure.cpp  ventilation-pressure.h  ventilation-resistance.cpp  ventilation-resistance.h  ventilation-utilities.h  ventilation-volume.cpp  ventilation-volume.h  ventilation.cpp
subprojects/: ventilation.wrap
tests/: integration.cpp  meson.build
